<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecipesAdda</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="write_us">Your Valuable Feedback</string>
    <string name="send">Send Feedback</string>
    <string name="success_msg">Feedback Sent Successfully</string>
    <string name="failure_msg">Some issue occured. Please try again!</string>
    <string name="copyright_msg">©2015 Creative bucket software solutions</string>
    <string name="internet_error">Please check your internet connection &amp; try again!</string>
    <string name="internet_slow_error">Slow internet connection detected, Please try again!</string>
    <string name="like_us_fb">Like us on Facebook</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="try_now">Let\'s try it</string>
    <string name="video_mode">Video on same screen</string>
    <string name="recipe_title">Recipe Title</string>

    <!-- navigation drawer item labels -->
    <string-array name="nav_drawer_labels">
        <item>Punjabi Recipes</item>
        <item>Bengali Recipes</item>
        <item>Gujarati Recipes</item>
        <item>Rajasthani Recipes</item>
        <item>Bihari Recipes</item>
        <item>Himachal Recipes</item>
        <item>Jammu &amp; Kashmir Recipes</item>
        <item>Haryana Recipes</item>
        <item>Goa Recipes</item>
        <item>Chattishgarh Recipes</item>
        <item>Andhra Recipes</item>
        <item>Arunachal Recipes</item>
        <item>Assam Recipes</item>
        <item>Submit Your Recipe</item>
        <item>Rate the App</item>
        <item>Settings</item>

    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients:</string>
    <string name="preparation">Preparation:</string>

</resources>
