<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/recipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:visibility="visible" />

                <!--
                <com.google.android.youtube.player.YouTubePlayerView
                    android:id="@+id/youtube_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" /> -->

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/android:progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/watch_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/custom_button"
                    android:paddingBottom="2dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/try_now"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/like_us_fb"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/fb_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/fb_image" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ingredients"
                android:textColor="#C13E16"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/ingredient_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/preparation"
                android:textColor="#C13E16"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/dish_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:typeface="serif" />
        </LinearLayout>


    </ScrollView>


</RelativeLayout>